# Steve

./: .gitignore  Dockerfile  README.md  action.yml  main.py  postCreateScript.sh  readme.md  requirements.txt  steve.py
.devcontainer/: devcontainer.json
.github/.workflows/: RunSteve.yml
.github/workflows/: RunSteve.yml
steve/: Cargo.toml
steve/src/: audit.rs  git.rs  llm.rs  main.rs
steve/src/llm/: vectors.rs
