[package]
name = "steve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.*", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
rig-core = "0.10.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0"
