[package]
name = "steve"
version = "0.3.1"
edition = "2024"
description = "STEVE: Search Technical Evidence Very Easily"
repository = "https://github.com/dev-ben-nisien/Steve"
license = "MIT"
readme = "../README.md"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.*", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
futures = "0.3.31"
indicatif = "0.17.11"
rig-core = "0.11.0"
serde = "1.0.219"
termimad = "0.31.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0"
